--- a/semfpad.plist
+++ b/semfpad.plist
@@ -28,18 +28,14 @@
 			</array>
 			<key>metadata</key>
 			<dict>
-				<key>application-identifier</key>
-				<string>49R4P5UT8.com.datacvg.SEMF-iPa-iPad</string>
-				<key>aps-environment</key>
-				<string>production</string>
-				<key>com.apple.developer.team-ide-identifier</key>
-				<string>349R4P5UT8</string>
-				<key>bundle-version</key>
-				<string>1.0</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>title</key>
-				<string>SEMPMobile HD</string>
+				<key>bundle-identifier</key>
+	                        <string>com.datacvg.SEMF-iPad</string>
+	                        <key>bundle-version</key>
+	                        <string>1.0</string>
+	                        <key>kind</key>
+	                        <string>software</string>
+	                        <key>title</key>
+	                        <string>SEMF iPad</string>
 			</dict>
 		</dict>
 	</array>
